--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,9 @@ dependencies {
     implementation 'jp.wasabeef:richeditor-android:2.0.0'
     implementation 'com.earlyeast.android:RichEditText:0.6.0'
     implementation 'com.commonsware.cwac:richedit:0.5.3'
-
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.retrofit2:converter-scalars:2.4.0"
 
 
 }
