--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,12 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         maven { url 'https://jitpack.io' }
         maven {
             url "https://s3.amazonaws.com/repo.commonsware.com"
         }
+        maven { url 'https://maven.google.com' }
 
     }
 }
